test/libyul/yulSyntaxTests/linkersymbol_evmtyped.yul
{
    let addr:u256 := linkersymbol("contract/library.sol:L")
}
// ====
// dialect: evmTyped
// ----
// TypeError 5017: (23-35): The identifier "linkersymbol" is reserved and can not be used.
